force-app/main/default/objects/Revenue_Risk__c/Revenue_Risk__c.object-meta.xml
<CustomObject>
    <description>Tracks failure-to-pipeline mapping to quantify the business impact of workflow incidents.</description>
    <label>Revenue Risk</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Risk ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>