force-app/main/default/objects/Revenue_Risk__c/fields/Affected_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Affected_Pipeline__c</fullName>
    <description>The specific pipeline value directly affected by this failure.</description>
    <label>Affected Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>