force-app/main/default/objects/Revenue_Risk__c/fields/Related_Incident__c.field-meta.xml
<CustomField>
    <fullName>Related_Incident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The incident causing this revenue risk.</description>
    <label>Related Incident</label>
    <referenceTo>Incident__c</referenceTo>
    <relationshipLabel>Revenue Risks</relationshipLabel>
    <relationshipName>Revenue_Risks</relationshipName>
    <type>Lookup</type>
</CustomField>