force-app/main/default/objects/Revenue_Risk__c/fields/Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Date__c</fullName>
    <description>The date and time this risk was resolved or mitigated.</description>
    <label>Resolution Date</label>
    <type>DateTime</type>
</CustomField>