force-app/main/default/objects/Revenue_Risk__c/fields/Risk_Amount__c.field-meta.xml
<CustomField>
    <fullName>Risk_Amount__c</fullName>
    <description>The estimated revenue value at risk due to this incident.</description>
    <label>Risk Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>